Import Flatpak content

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,5 +1,5 @@
-* xref:architecture.adoc[Architecture]
-** xref:pizza-owen.adoc[Pizza Owen]
-** xref:pizza-dough.adoc[Pizza Dough]
-* xref:community.adoc[Community]
-* xref:faq.adoc[FAQ]
+* xref:concepts.adoc[Flatpak Concepts]
+* xref:tutorial.adoc[Packaging Tutorial]
+* xref:in-depth.adoc[Packaging In Depth]
+* xref:runtimes.adoc[Packaging Runtimes]
+* xref:troubleshooting.adoc[Troubleshooting]
